# Lemongrass

./: .dockerignore  .env.local  .env.sample  .flake8  .gitignore  .pylintrc  .python-version  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.laps  Dockerfile.pi  LICENSE  README.md  WOT LEMONS-87529-6771052.csv  backfill.py  batt.py  diagnose_race.py  dnstest.py  docker-compose.local.yml  docker-compose.yml  install-systemd.sh  juan-batt.py  laps.py  laps_to_influx.py  lapsoutput.txt  lemongrass.py  lemongrass.toml.sample  pi-requirements.txt  pisguar-boot-watchdog.sh  pisugar-boot-watchdog.sh  pisugar-monitor.py  pisugar-watchdog.sh  pyproject.toml  race-requirements.txt  release-please-config.json  renovate.json  requirements.txt  telegraf-install-notes.txt  telem.py
.github/: dependabot.yml
.github/workflows/: check-requirements.yml  cleanup-pr-images.yml  docker-build-laps.yml  docker-build-pi.yml  docker-build.yml  package-cleanup.yml  pytest.yml  python-syntax.yml  release-please.yml  uv-lock-check.yml
docs/: CONFIGURATION.md
local-testing/: .env  .env.local  docker-compose.yml  install-emulator.sh  lemongrass.toml
local-testing/elm327/: Dockerfile  logging.yaml
local-testing/grafana/provisioning/dashboards/: dashboards.yml
local-testing/grafana/provisioning/dashboards/json/: car252-pisugar-ups.json  laps.json  race-control.json  standings.json  telegraf.json
local-testing/grafana/provisioning/datasources/: influxdb.yml
local-testing/influx-init/: 10-create-buckets.sh  20-create-dbrp.sh
local-testing/migrations/: 2026-07-05-stats252-split.flux  README.md
rsyslog/: 50-telegraf.conf
scripts/influx-init/: 10-create-buckets.sh
src/lemongrass/: __init__.py  _backfill_tui.py  _config.py  _env.py  _home_tui.py  _influx.py  _laps_tui.py  _races_tui.py  _spool.py  _tui.py  cli.py  laps.py  pisugar_monitor.py  race_backfill.py  race_diagnose.py  races.py  telem.py
systemd/: batt.service  lemongrass.service  pisugar-boot-watchdog.service  pisugar-monitor.service  pisugar-watchdog.service  reverse-tunnel.service  telem.service
telegraf/: telegraf.conf
tests/: conftest.py  test_backfill.py  test_backfill_tui.py  test_cli.py  test_config.py  test_env.py  test_home_tui.py  test_influx.py  test_laps.py  test_laps_tui.py  test_pisugar_monitor.py  test_race_backfill.py  test_race_diagnose.py  test_races.py  test_races_tui.py  test_spool.py  test_telem.py  test_telem_integration.py  test_tui.py
udev/: 99-obd.rules
