[project]
name = "lemongrass"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = [
    "influxdb-client~=1.47",
    "obd~=0.7",
    "pandas~=2.3",
    "race-monitor>=0.5.1,<1",
]

[build-system]
requires = ["uv-build>=0.11.21,<0.12"]
build-backend = "uv_build"

[project.scripts]
lemongrass = "lemongrass.cli:main"

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[dependency-groups]
dev = ["pytest>=8"]
