[project]
name = "lemongrass"
version = "5.0.1"
description = "Telemetry stack for 24 Hours of Lemons"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "WOT-Lemons"}]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["race monitor", "racing", "motorsport", "telemetry", "obd2", "obd"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "influxdb-client~=1.47",
    "obd~=0.7",
    "pandas~=3.0",
    "race-monitor>=1.0,<2.0",
    "textual~=8.2",
    "tomlkit~=0.15",
    "urllib3>=2",
]

[project.urls]
Source = "https://github.com/WOT-Lemons/Lemongrass"
"Bug Tracker" = "https://github.com/WOT-Lemons/Lemongrass/issues"
Changelog = "https://github.com/WOT-Lemons/Lemongrass/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv-build>=0.11.21,<0.12"]
build-backend = "uv_build"

[project.scripts]
lemongrass = "lemongrass.cli:main"

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "D1", "I", "B", "UP", "RUF", "N", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D1", "SIM117"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.14,<1.0",
]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: real OBD path against the ELM327 emulator (emulator must be installed; excluded from the default run)",
]
